--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,13 @@
   "description": "",
   "dependencies": {
     "@fastify/cors": "^11.0.0",
+    "@fastify/multipart": "^9.0.3",
     "@prisma/client": "^6.5.0",
     "@types/pdfkit": "^0.13.9",
     "fastify": "^5.2.1",
     "pdfkit": "^0.16.0",
-    "prisma": "^6.5.0"
+    "prisma": "^6.5.0",
+    "undici": "^7.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.13.11",
